# shmup

./: CLAUDE.md  Cargo.toml  README.md  achievements.json  balance_data.json  checklist.md  design_doc.md  steam.md
cosmic_ui/: Cargo.toml
cosmic_ui/src/: bindings.rs  builder.rs  lib.rs  systems.rs  widgets.rs
cosmic_ui_derive/: Cargo.toml
cosmic_ui_derive/src/: lib.rs
src/: achievements.rs  audio.rs  background.rs  balance_systems.rs  biological_systems.rs  card_system.rs  components.rs  constants.rs  cosmic_ui_integration.rs  currency_systems.rs  daily_challenges.rs  debug.rs  despawn.rs  enemy_systems.rs  enemy_types.rs  events.rs  explosions.rs  hanabi_particles.rs  hanabi_particles_old.rs  high_scores.rs  input.rs  lib.rs  lighting.rs  main.rs  menu_systems.rs  missile_trails.rs  particle_bridge.rs  particle_bridge_old.rs  particles.rs  pause_menu.rs  pause_system.rs  physics.rs  player.rs  powerup_systems.rs  resources.rs  stage_summary.rs  systems.rs  tidal_feedback.rs  tidal_mechanics.rs  user_interface.rs  (+2 more)
