[package]
name = "Cosmic_Tidal_Pool"
version = "0.2.2"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_render", "shader_format_wesl", "track_location"] }
bevy_light_2d = "0.6"  # Latest version compatible with Bevy 0.16.1
bevy_hanabi = "0.16.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cosmic UI dependencies
cosmic_ui = { path = "cosmic_ui" }
cosmic_ui_derive = { path = "cosmic_ui_derive" }

[workspace]
members = ["cosmic_ui", "cosmic_ui_derive"]

# Performance optimizations
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Fast dev builds
[profile.dev]
opt-level = 1

